crates/djls-project/tests/snapshots/corpus__repos__django-oscar__src__oscar__templatetags__shipping_tags.py.snap
---
source: crates/djls-project/tests/corpus.rs
expression: sorted_snapshot(&bundle)?
---
definitions:
  "tag::shipping_charge":
    kind: tag
    has_doc: false
  "tag::shipping_charge_discount":
    kind: tag
    has_doc: false
  "tag::shipping_charge_excl_discount":
    kind: tag
    has_doc: false
symbols_are_unobserved: false
tag_rules:
  "oscar.templatetags.shipping_tags::tag::shipping_charge":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters:
          - name: method
            requirement: required
            kind: Variable
          - name: basket
            requirement: required
            kind: Variable
        positional_only: 0
        variadic_keyword: ~
    as_var: strip
  "oscar.templatetags.shipping_tags::tag::shipping_charge_discount":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters:
          - name: method
            requirement: required
            kind: Variable
          - name: basket
            requirement: required
            kind: Variable
        positional_only: 0
        variadic_keyword: ~
    as_var: strip
  "oscar.templatetags.shipping_tags::tag::shipping_charge_excl_discount":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters:
          - name: method
            requirement: required
            kind: Variable
          - name: basket
            requirement: required
            kind: Variable
        positional_only: 0
        variadic_keyword: ~
    as_var: strip
filter_arities: {}
block_specs: {}
