crates/djls-project/tests/snapshots/corpus__repos__django-oscar__src__oscar__templatetags__string_filters.py.snap
---
source: crates/djls-project/tests/corpus.rs
expression: sorted_snapshot(&bundle)?
---
definitions:
  "filter::split":
    kind: filter
    has_doc: false
symbols_are_unobserved: false
tag_rules: {}
filter_arities:
  "oscar.templatetags.string_filters::filter::split": optional_argument
block_specs: {}
